--- a/src/main.html
+++ b/src/main.html
@@ -14,7 +14,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#121212" id="themeMeta">
     <link rel="stylesheet" href="float.min.css" type="text/css">
-    <link rel="manifest" href="/app.webmanifest"/>
+    <link rel="manifest" href="/app.webmanifest" />
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <script src="form.min.js"></script>
     <style>
@@ -53,7 +53,9 @@
 </head>
 
 <body class="dark-mode">
-    <script>themeHandle()</script>
+    <script>
+        themeHandle()
+    </script>
     <form action="/submit" target="_self" method="POST" name="mainForm" id="mainFormHTML">
         <input type="text" value="main" name="formType" hidden>
         <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1><br>
@@ -354,4 +356,5 @@
         //end grid script
     </script>
 </body>
+
 </html>
