--- a/src/matches.html
+++ b/src/matches.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Matches - 766 Scouting</title>
     <meta charset="utf-8">
@@ -13,7 +14,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#121212" id="themeMeta">
     <link rel="stylesheet" href="float.min.css" type="text/css">
-    <link rel="manifest" href="/app.webmanifest"/>
+    <link rel="manifest" href="/app.webmanifest" />
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <script src="form.min.js"></script>
     <style>
@@ -29,8 +30,11 @@
         }
     </style>
 </head>
+
 <body class="dark-mode">
-    <script>themeHandle()</script>
+    <script>
+        themeHandle()
+    </script>
     <div class="container" id="search" style="display: flex;">
         <div class="maincontent">
             <h1 style="font-family: 'raleway-300'">2023 Matches<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
@@ -47,14 +51,15 @@
         </div>
         <br><br>
     </div>
-    <div class="container" id="results" style="display: none;"> <!--flex is shown-->
+    <div class="container" id="results" style="display: none;">
+        <!--flex is shown-->
         <div class="dummy">
             <h1 style="font-family: 'raleway-300'" id="matchHeader">2023 Matches<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
-            
+
             <!--buttons-->
             <button style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" onclick='goToHome()'>Back</button><br>
-        <br><br>
-    </div>
+            <br><br>
+        </div>
     </div>
     <script>
         const waitMs = ms => new Promise(res => setTimeout(res, ms));
@@ -105,4 +110,5 @@
         }
     </script>
 </body>
+
 </html>
