--- a/src/points.html
+++ b/src/points.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Points - 766 Scouting</title>
     <meta charset="utf-8">
@@ -13,7 +14,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#121212" id="themeMeta">
     <link rel="stylesheet" href="float.min.css" type="text/css">
-    <link rel="manifest" href="/app.webmanifest"/>
+    <link rel="manifest" href="/app.webmanifest" />
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <style>
         body {
@@ -32,7 +33,9 @@
 </head>
 
 <body class="dark-mode">
-    <script>themeHandle()</script>
+    <script>
+        themeHandle()
+    </script>
     <div class="container">
         <form>
             <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1>
@@ -52,4 +55,5 @@
         }
     </script>
 </body>
+
 </html>
