--- a/src/submitted.html
+++ b/src/submitted.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -12,9 +13,9 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#121212" id="themeMeta">
     <link rel="stylesheet" href="float.min.css" type="text/css">
-    <link rel="manifest" href="/app.webmanifest"/>
+    <link rel="manifest" href="/app.webmanifest" />
     <link rel="apple-touch-startup-image" href="public/launch.png">
-    <meta http-equiv="refresh" content="2;url=/"/>
+    <meta http-equiv="refresh" content="2;url=/" />
     <script src="form.min.js"></script>
     <title>Form Submitted - 766 Scouting</title>
     <style>
@@ -23,9 +24,13 @@
         }
     </style>
 </head>
-    <body class="dark-mode">
-        <script>themeHandle()</script>
-        <h1 style="color: #FFB600">Submitted!</h1>
-        <h3 style="text-align: center;" class="gameflair1">Redirecting...</h3>
-    </body>
+
+<body class="dark-mode">
+    <script>
+        themeHandle()
+    </script>
+    <h1 style="color: #FFB600">Submitted!</h1>
+    <h3 style="text-align: center;" class="gameflair1">Redirecting...</h3>
+</body>
+
 </html>
