--- a/src/blackjack.html
+++ b/src/blackjack.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Blackjack - 766 Scouting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
@@ -9,7 +10,7 @@
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Scouting">
-    <link rel="manifest" href="/app.webmanifest"/>
+    <link rel="manifest" href="/app.webmanifest" />
     <link rel="stylesheet" href="float.min.css" type="text/css">
     <meta name="mobile-web-app-capable" content="yes">
     <script src="form.min.js"></script>
@@ -40,8 +41,10 @@
 </head>
 
 <body class="dark-mode">
-    <script>themeHandle()</script>
-    <div class="container" id="search" style="display: flex;"> 
+    <script>
+        themeHandle()
+    </script>
+    <div class="container" id="search" style="display: flex;">
         <div>
             <h1 id="title" style="font-family: 'raleway-300'">766 Casino<br><span class="gametitle">Single-Player Blackjack</span></h1>
             <canvas id="bjCanvas" width="128" height="128" style="display: none;"></canvas><br>
@@ -55,4 +58,5 @@
         }
     </script>
 </body>
+
 </html>
