--- a/src/notes.html
+++ b/src/notes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Team Notes - 766 Scouting</title>
     <meta charset="utf-8">
@@ -13,7 +14,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#121212" id="themeMeta">
     <link rel="stylesheet" href="float.min.css" type="text/css">
-    <link rel="manifest" href="/app.webmanifest"/>
+    <link rel="manifest" href="/app.webmanifest" />
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <script src="form.min.js"></script>
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" crossorigin="anonymous">
@@ -33,8 +34,11 @@
         }
     </style>
 </head>
+
 <body class="dark-mode">
-    <script>themeHandle()</script>
+    <script>
+        themeHandle()
+    </script>
     <div class="container" id="search" style="display: flex;">
         <div class="maincontent">
             <h1 style="font-family: 'raleway-300'">2023 Notes<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
@@ -209,4 +213,5 @@
         }
     </script>
 </body>
+
 </html>
