--- a/src/profile.html
+++ b/src/profile.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Profile - 766 Scouting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
@@ -9,7 +10,7 @@
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Scouting">
-    <link rel="manifest" href="/app.webmanifest"/>
+    <link rel="manifest" href="/app.webmanifest" />
     <link rel="stylesheet" href="float.min.css" type="text/css">
     <meta name="mobile-web-app-capable" content="yes">
     <script src="form.min.js"></script>
@@ -56,8 +57,11 @@
 </head>
 
 <body class="dark-mode" onload="getTeamRanks()">
-    <script>themeHandle()</script>
-    <div class="container" id="search" style="display: flex;"> <!--flex is shown-->
+    <script>
+        themeHandle()
+    </script>
+    <div class="container" id="search" style="display: flex;">
+        <!--flex is shown-->
         <form>
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
             <h4>Scout Ranks</h4><br>
@@ -65,25 +69,26 @@
         </form>
         <br><br>
     </div>
-    <div class="container" id="results" style="display: none;"> <!--flex is shown-->
+    <div class="container" id="results" style="display: none;">
+        <!--flex is shown-->
         <div class="dummy">
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
             <fieldset>
-            <fieldset>
-                <h3 id="eventCodeDisplay"></h3>
-                <table>
-                    <tr id="preInsert">
-                      <th>Scout Name</th>
-                      <th>Score</th> 
-                    </tr>
-                  </table>
+                <fieldset>
+                    <h3 id="eventCodeDisplay"></h3>
+                    <table>
+                        <tr id="preInsert">
+                            <th>Scout Name</th>
+                            <th>Score</th>
+                        </tr>
+                    </table>
+                </fieldset>
+                <!--buttons-->
+                <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" id="viewScoutsButton" onclick="window.location.reload()">Reload</button><br>
+                <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
             </fieldset>
-            <!--buttons-->
-            <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" id="viewScoutsButton" onclick="window.location.reload()">Reload</button><br>
-            <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
-            </fieldset>
-        <br><br>
-    </div>
+            <br><br>
+        </div>
     </div>
     <script>
         const waitMs = ms => new Promise(res => setTimeout(res, ms));
@@ -123,4 +128,5 @@
         }
     </script>
 </body>
+
 </html>
