--- a/src/spin.html
+++ b/src/spin.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <link rel="manifest" href="/app.webmanifest"/>
     <link rel="stylesheet" href="float.min.css" type="text/css">
-    <link rel="stylesheet" href="assets/spin.css" type="text/css">
+    <link rel="stylesheet" href="assets/spin.min.css" type="text/css">
     <meta name="mobile-web-app-capable" content="yes">
     <script src="form.min.js"></script>
     <style>
