--- a/src/topitscout.html
+++ b/src/topitscout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Teams To Pit Scout - 766 Scouting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
@@ -9,7 +10,7 @@
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Scouting">
-    <link rel="manifest" href="/app.webmanifest"/>
+    <link rel="manifest" href="/app.webmanifest" />
     <link rel="stylesheet" href="float.min.css" type="text/css">
     <meta name="mobile-web-app-capable" content="yes">
     <script src="form.min.js"></script>
@@ -35,8 +36,11 @@
 </head>
 
 <body class="dark-mode">
-    <script>themeHandle()</script>
-    <div class="container" id="search" style="display: flex;"> <!--flex is shown-->
+    <script>
+        themeHandle()
+    </script>
+    <div class="container" id="search" style="display: flex;">
+        <!--flex is shown-->
         <form>
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
             <h4>Teams To Pit Scout</h4><br>
@@ -139,4 +143,5 @@
         }
     </script>
 </body>
+
 </html>
