apple system font

--- a/src/points.html
+++ b/src/points.html
@@ -20,10 +20,11 @@
         body {
             text-align: center;
         }
-        a,a:visited {
+        a, a:visited {
             text-align: center;
             text-decoration: none;
             font-size: 6vh;
+            font-weight: 300;
         }
         a:hover,a:active {
             color: var(--textColor);
