offseason comp fix

--- a/src/main.html
+++ b/src/main.html
@@ -64,7 +64,8 @@
             <label>Event Code</label><br>
             <select name="event" id="eventCode">
                 <option value="CADA">CADA - Sacramento Regional</option>
-                <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
+                <option value="CASJ">CASJ - Silicon Valley Regional</option>
+                <option value="WOOD" selected>WOOD - CalGames</option>
             </select>
         </fieldset>
 
