--- a/src/topitscout.html
+++ b/src/topitscout.html
@@ -48,7 +48,8 @@
                 <label id="eventLabel">Event Code: </label><br>
                 <select name="event" id="eventCode">
                     <option value="CADA">CADA - Sacramento Regional</option>
-                    <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
+                    <option value="CASJ">CASJ - Silicon Valley Regional</option>
+                    <option value="WOOD" selected>WOOD - CalGames</option>
                 </select>
             </fieldset>
             <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" id="viewTeamsButton" onclick="getUnscoutedTeams()">View</button><br>
@@ -71,35 +72,36 @@
             xhr.withCredentials = true;
 
             xhr.onreadystatechange = async () => {
-            if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-                console.log("200 ok")
-                console.log(xhr.responseText)
-                window.allTeams = xhr.responseText.split(",")
-                console.log(getDifference())
-                document.getElementById("eventLabel").style.display = "none"
-                document.getElementById("eventCode").insertAdjacentHTML("afterend", `<div id="unscouted"><br><span>To Scout: </span><br>${getDifference().join("<br>")}</div>`);
-                document.getElementById("eventCode").style.display = "none"
-                document.getElementById("viewTeamsButton").innerHTML = "Done!";
-                return 0;
-            } else if (xhr.status === 401) {
-                console.log("401 failure")
-                document.getElementById("viewTeamsButton").innerHTML = "401 Unauthorized";
-                await waitMs(1000);
-                window.location.href = "/login";
-            } else if (xhr.status === 400) {
-                console.log("400 failure")
-                document.getElementById("viewTeamsButton").innerHTML = "400 Bad Request";
-            } else if (xhr.status === 500) {
-                console.log("500 failure")
-                document.getElementById("viewTeamsButton").innerHTML = "500 Internal Server Error";
-            } else {
-                console.log("awaiting response")
-                document.getElementById("viewTeamsButton").innerHTML = "Downloading Data...";
-            }
+                if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
+                    console.log("200 ok")
+                    console.log(xhr.responseText)
+                    window.allTeams = xhr.responseText.split(",")
+                    console.log(getDifference())
+                    document.getElementById("eventLabel").style.display = "none"
+                    document.getElementById("eventCode").insertAdjacentHTML("afterend", `<div id="unscouted"><br><span>To Scout: </span><br>${getDifference().join("<br>")}</div>`);
+                    document.getElementById("eventCode").style.display = "none"
+                    document.getElementById("viewTeamsButton").innerHTML = "Done!";
+                    return 0;
+                } else if (xhr.status === 401) {
+                    console.log("401 failure")
+                    document.getElementById("viewTeamsButton").innerHTML = "401 Unauthorized";
+                    await waitMs(1000);
+                    window.location.href = "/login";
+                } else if (xhr.status === 400) {
+                    console.log("400 failure")
+                    document.getElementById("viewTeamsButton").innerHTML = "400 Bad Request";
+                } else if (xhr.status === 500) {
+                    console.log("500 failure")
+                    document.getElementById("viewTeamsButton").innerHTML = "500 Internal Server Error";
+                } else {
+                    console.log("awaiting response")
+                    document.getElementById("viewTeamsButton").innerHTML = "Downloading Data...";
+                }
             }
 
             xhr.send()
         }
+
         function getScoutedTeams() {
             eventCode = document.getElementById("eventCode").value
             document.getElementById("viewTeamsButton").innerHTML = "Requesting Data...";
@@ -108,27 +110,27 @@
             xhr.withCredentials = true;
 
             xhr.onreadystatechange = async () => {
-            if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-                console.log("200 ok")
-                console.log(xhr.responseText)
-                window.scoutedTeams = xhr.responseText.split(",")
-                getAllTeams()
-                return 0;
-            } else if (xhr.status === 401) {
-                console.log("401 failure")
-                document.getElementById("viewTeamsButton").innerHTML = "401 Unauthorized";
-                await waitMs(1000);
-                window.location.href = "/login";
-            } else if (xhr.status === 400) {
-                console.log("400 failure")
-                document.getElementById("viewTeamsButton").innerHTML = "400 Bad Request";
-            } else if (xhr.status === 500) {
-                console.log("500 failure")
-                document.getElementById("viewTeamsButton").innerHTML = "500 Internal Server Error";
-            } else {
-                console.log("awaiting response")
-                document.getElementById("viewTeamsButton").innerHTML = "Downloading Data...";
-            }
+                if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
+                    console.log("200 ok")
+                    console.log(xhr.responseText)
+                    window.scoutedTeams = xhr.responseText.split(",")
+                    getAllTeams()
+                    return 0;
+                } else if (xhr.status === 401) {
+                    console.log("401 failure")
+                    document.getElementById("viewTeamsButton").innerHTML = "401 Unauthorized";
+                    await waitMs(1000);
+                    window.location.href = "/login";
+                } else if (xhr.status === 400) {
+                    console.log("400 failure")
+                    document.getElementById("viewTeamsButton").innerHTML = "400 Bad Request";
+                } else if (xhr.status === 500) {
+                    console.log("500 failure")
+                    document.getElementById("viewTeamsButton").innerHTML = "500 Internal Server Error";
+                } else {
+                    console.log("awaiting response")
+                    document.getElementById("viewTeamsButton").innerHTML = "Downloading Data...";
+                }
             }
 
             xhr.send()
