--- a/src/pitimg.html
+++ b/src/pitimg.html
@@ -62,7 +62,8 @@
                         <label>Event Code: </label><br>
                         <select id="eventInput">
                     <option value="CADA">CADA - Sacramento Regional</option>
-                    <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
+                    <option value="CASJ">CASJ - Silicon Valley Regional</option>
+                    <option value="WOOD" selected>WOOD - CalGames</option>
                 </select>
                     </fieldset>
                     <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" onclick="searchImg()" id="searchBtn">Search</button><br>
@@ -103,39 +104,39 @@
             xhr.withCredentials = true;
 
             xhr.onreadystatechange = async () => {
-            if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-                if (xhr.responseText === "") {
-                    document.getElementById("searchBtn").innerHTML = "No results!";
+                if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
+                    if (xhr.responseText === "") {
+                        document.getElementById("searchBtn").innerHTML = "No results!";
+                    } else {
+                        console.log("200 ok");
+                        console.log(xhr.responseText);
+                        const dbQueryResult = JSON.parse(xhr.responseText);
+                        console.log(dbQueryResult);
+                        document.getElementById("searchBtn").innerHTML = "Rendering...";
+                        document.getElementById("resultsTeamNumber").innerText = dbQueryResult.team;
+                        document.getElementById("resultsEventCode").innerText = dbQueryResult.event;
+                        document.getElementById("resultsbody").innerHTML = `<p>Scout: ${dbQueryResult.discordName}#${dbQueryResult.discordTag}</p><p>Drive Type: ${dbQueryResult.drivetype}</p><p>Pit Scouting Assesment: ${dbQueryResult.overall}</p><br><img src="images/${dbQueryResult.image1}" alt="robot image from pit scouting (1)"/><br><img src="images/${dbQueryResult.image2}" alt="robot image from pit scouting (2)"/><br><img src="images/${dbQueryResult.image3}" alt="robot image from pit scouting (3)"/><br><img src="images/${dbQueryResult.image4}" alt="robot image from pit scouting (4)"/><br><img src="images/${dbQueryResult.image5}" alt="robot image from pit scouting (5)"/>`;;
+                        document.getElementById("searchsect").style.display = "none";
+                        document.getElementById("resultsect").style.display = "block";
+                    }
+                } else if (xhr.status === 401) {
+                    console.log("401 failure")
+                    document.getElementById("searchBtn").innerHTML = "401 Unauthorized";
+                    await waitMs(1000);
+                    window.location.href = "/login";
+                } else if (xhr.status === 400) {
+                    console.log("400 failure")
+                    document.getElementById("searchBtn").innerHTML = "400 Bad Request";
+                } else if (xhr.status === 500) {
+                    console.log("500 failure")
+                    document.getElementById("searchBtn").innerHTML = "500 Internal Server Error";
+                } else if (xhr.status === 404) {
+                    console.log("404 not found")
+                    document.getElementById("searchBtn").innerHTML = "404 Not Found";
                 } else {
-                    console.log("200 ok");
-                    console.log(xhr.responseText);
-                    const dbQueryResult = JSON.parse(xhr.responseText);
-                    console.log(dbQueryResult);
-                    document.getElementById("searchBtn").innerHTML = "Rendering...";
-                    document.getElementById("resultsTeamNumber").innerText = dbQueryResult.team;
-                    document.getElementById("resultsEventCode").innerText = dbQueryResult.event;
-                    document.getElementById("resultsbody").innerHTML = `<p>Scout: ${dbQueryResult.discordName}#${dbQueryResult.discordTag}</p><p>Drive Type: ${dbQueryResult.drivetype}</p><p>Pit Scouting Assesment: ${dbQueryResult.overall}</p><br><img src="images/${dbQueryResult.image1}" alt="robot image from pit scouting (1)"/><br><img src="images/${dbQueryResult.image2}" alt="robot image from pit scouting (2)"/><br><img src="images/${dbQueryResult.image3}" alt="robot image from pit scouting (3)"/><br><img src="images/${dbQueryResult.image4}" alt="robot image from pit scouting (4)"/><br><img src="images/${dbQueryResult.image5}" alt="robot image from pit scouting (5)"/>`;;
-                    document.getElementById("searchsect").style.display = "none";
-                    document.getElementById("resultsect").style.display = "block";
+                    console.log("awaiting response")
+                    document.getElementById("searchBtn").innerHTML = "Downloading Data...";
                 }
-            } else if (xhr.status === 401) {
-                console.log("401 failure")
-                document.getElementById("searchBtn").innerHTML = "401 Unauthorized";
-                await waitMs(1000);
-                window.location.href = "/login";
-            } else if (xhr.status === 400) {
-                console.log("400 failure")
-                document.getElementById("searchBtn").innerHTML = "400 Bad Request";
-            } else if (xhr.status === 500) {
-                console.log("500 failure")
-                document.getElementById("searchBtn").innerHTML = "500 Internal Server Error";
-            } else if (xhr.status === 404) {
-                console.log("404 not found")
-                document.getElementById("searchBtn").innerHTML = "404 Not Found";
-            } else {
-                console.log("awaiting response")
-                document.getElementById("searchBtn").innerHTML = "Downloading Data...";
-            }
             }
 
             xhr.send()
