--- a/src/teams.html
+++ b/src/teams.html
@@ -69,7 +69,8 @@
                 <label>Event Code: </label><br>
                 <select name="event" id="eventCode">
                     <option value="CADA">CADA - Sacramento Regional</option>
-                    <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
+                    <option value="CASJ">CASJ - Silicon Valley Regional</option>
+                    <option value="WOOD" selected>WOOD - CalGames</option>
                 </select>
             </fieldset>
             <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" id="viewTeamsButton" onclick="getTeamRanks()">View</button><br>
@@ -112,30 +113,30 @@
             xhr.withCredentials = true;
 
             xhr.onreadystatechange = async () => {
-            if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-                console.log("200 ok")
-                console.log(xhr.responseText)
-                document.getElementById("viewTeamsButton").innerText = "Rendering View...";
-                document.getElementById("preInsert").insertAdjacentHTML("afterend", xhr.responseText)
-                document.getElementById("search").style.display = "none";
-                document.getElementById("results").style.display = "flex";
-                document.getElementById("eventCodeDisplay").innerText = `Top teams at ${eventCode}`;
-                document.getElementById("viewTeamsButton").innerText = "View";
-            } else if (xhr.status === 401) {
-                console.log("401 failure")
-                document.getElementById("viewTeamsButton").innerText = "401 Unauthorized";
-                await waitMs(1000);
-                window.location.href = "/login";
-            } else if (xhr.status === 400) {
-                console.log("400 failure")
-                document.getElementById("viewTeamsButton").innerText = "400 Bad Request";
-            } else if (xhr.status === 500) {
-                console.log("500 failure")
-                document.getElementById("viewTeamsButton").innerText = "500 Internal Server Error";
-            } else {
-                console.log("awaiting response")
-                document.getElementById("viewTeamsButton").innerText = "Downloading Data...";
-            }
+                if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
+                    console.log("200 ok")
+                    console.log(xhr.responseText)
+                    document.getElementById("viewTeamsButton").innerText = "Rendering View...";
+                    document.getElementById("preInsert").insertAdjacentHTML("afterend", xhr.responseText)
+                    document.getElementById("search").style.display = "none";
+                    document.getElementById("results").style.display = "flex";
+                    document.getElementById("eventCodeDisplay").innerText = `Top teams at ${eventCode}`;
+                    document.getElementById("viewTeamsButton").innerText = "View";
+                } else if (xhr.status === 401) {
+                    console.log("401 failure")
+                    document.getElementById("viewTeamsButton").innerText = "401 Unauthorized";
+                    await waitMs(1000);
+                    window.location.href = "/login";
+                } else if (xhr.status === 400) {
+                    console.log("400 failure")
+                    document.getElementById("viewTeamsButton").innerText = "400 Bad Request";
+                } else if (xhr.status === 500) {
+                    console.log("500 failure")
+                    document.getElementById("viewTeamsButton").innerText = "500 Internal Server Error";
+                } else {
+                    console.log("awaiting response")
+                    document.getElementById("viewTeamsButton").innerText = "Downloading Data...";
+                }
             }
 
             xhr.send()
